attemp 2: fixing box shadow on mobile"

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
   background-color: #fafafa;
-  -webkit-appearance: none;
 }
 
 ::-webkit-scrollbar {
